Step 3A: Add VirtualThreads parallel-computation to CalculateRewards